# notion-md-cli

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  SKILL.md  pyproject.toml
src/notion_md_cli/: cli.py  client.py  extractor.py  parser.py
tests/: test_cli.py  test_extractor.py  test_parser.py
